Better support touching Marker and querying if exists